# Heuristic

./: CMakeLists.txt  README.md  constraint_hybrid.h  constraint_penalty.h  constraint_repair.h  data_structures.h  ga_baseline.h  main  main.cpp  main1  main1.cpp  main2  main2.cpp  main3  main3.cpp  results.csv  run_experiments.py  sweep_ga.sh  test.csv  test_timing.csv  travel  visualize.py  west_europe_cities.csv  west_europe_travel_hours.csv  world_cities.csv  world_travel_hours.csv
include/: centroid_penalty.hpp  custom_penalty.hpp  demo_constrained_udp.hpp  normalize.hpp  penalized_udp.hpp  penalty_params.hpp  penalty_state.hpp  penalty_wrapper.hpp
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
main1.dSYM/Contents/Resources/DWARF/: main1
main1.dSYM/Contents/Resources/Relocations/aarch64/: main1.yml
results/: g06_death_s1.csv  g06_death_s2.csv  g06_debrules_s1.csv  g06_debrules_s2.csv  g06_elite_s1.csv  g06_elite_s2.csv
src/: main.cpp
